--- a/Rtos_TrialAndError/Rtos_TrialAndError/001_Rtos_TrialError.ioc
+++ b/Rtos_TrialAndError/Rtos_TrialAndError/001_Rtos_TrialError.ioc
@@ -8,12 +8,14 @@ Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=SYS
+Mcu.IPNb=3
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB3
+Mcu.Pin11=VP_SYS_VS_tim5
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -22,7 +24,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=11
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -35,9 +37,12 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:true\:true\:false
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.TimeBase=TIM5_IRQn
+NVIC.TimeBaseIP=TIM5
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -143,6 +148,8 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+VP_SYS_VS_tim5.Mode=TIM5
+VP_SYS_VS_tim5.Signal=SYS_VS_tim5
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
